workspace/tp1/src/Sl/Parser/Parser.info
-----------------------------------------------------------------------------
Info file generated by Happy Version 2.1.3 from Parser.y
-----------------------------------------------------------------------------

state 23 contains 1 shift/reduce conflicts.

-----------------------------------------------------------------------------
Grammar
-----------------------------------------------------------------------------
	%start_parseProgram -> Program                     (0)
	Program -> Defs                                    (1)
	Defs -> Def Defs                                   (2)
	Defs ->                                            (3)
	Def -> Function                                    (4)
	Def -> Struct                                      (5)
	Struct -> structName '{' Fields '}'                (6)
	Fields -> Field Fields                             (7)
	Fields ->                                          (8)
	Field -> ident ':' Type ';'                        (9)
	Function -> 'func' ident '(' Params ')' ReturnType Block   (10)
	ReturnType -> ':' Type                             (11)
	ReturnType ->                                      (12)
	Params -> Param ',' Params                         (13)
	Params -> Param                                    (14)
	Params ->                                          (15)
	Param -> ident ':' Type                            (16)
	Param -> ident                                     (17)
	Type -> BaseType TypeSuffix                        (18)
	TypeSuffix -> ArrayNonEmpty                        (19)
	TypeSuffix ->                                      (20)
	ArrayNonEmpty -> '[' ']'                           (21)
	ArrayNonEmpty -> '[' intLit ']'                    (22)
	BaseType -> 'TYPE'                                 (23)
	BaseType -> structName                             (24)
	Block -> '{' Stmts '}'                             (25)
	Stmts -> Stmt Stmts                                (26)
	Stmts ->                                           (27)
	Stmt -> ident '=' Exp ';'                          (28)
	Stmt -> LValue '=' Exp ';'                         (29)
	Stmt -> 'print' '(' Exp ')' ';'                    (30)
	Stmt -> 'return' Exp ';'                           (31)
	Stmt -> 'return' ';'                               (32)
	Stmt -> 'if' '(' Exp ')' Block 'else' Block        (33)
	Stmt -> 'if' '(' Exp ')' Block                     (34)
	Stmt -> 'while' '(' Exp ')' Block                  (35)
	Stmt -> 'for' '(' ForInit ';' Exp ';' ForStep ')' Block   (36)
	Stmt -> Exp ';'                                    (37)
	ForInit -> ident '=' Exp                           (38)
	ForInit ->                                         (39)
	ForStep -> ident '=' Exp                           (40)
	ForStep -> Exp                                     (41)
	ForStep ->                                         (42)
	LValue -> LValue '[' Exp ']'                       (43)
	LValue -> LValue '.' ident                         (44)
	Exp -> intLit                                      (45)
	Exp -> floatLit                                    (46)
	Exp -> charLit                                     (47)
	Exp -> stringLit                                   (48)
	Exp -> 'true'                                      (49)
	Exp -> 'false'                                     (50)
	Exp -> ident                                       (51)
	Exp -> Exp '+' Exp                                 (52)
	Exp -> Exp '-' Exp                                 (53)
	Exp -> Exp '*' Exp                                 (54)
	Exp -> Exp '/' Exp                                 (55)
	Exp -> Exp '==' Exp                                (56)
	Exp -> Exp '!=' Exp                                (57)
	Exp -> Exp '<' Exp                                 (58)
	Exp -> Exp '>' Exp                                 (59)
	Exp -> Exp '<=' Exp                                (60)
	Exp -> Exp '>=' Exp                                (61)
	Exp -> Exp '&&' Exp                                (62)
	Exp -> ident '(' Args ')'                          (63)
	Exp -> Exp '[' Exp ']'                             (64)
	Exp -> Exp '.' ident                               (65)
	Exp -> 'new' Type '[' Exp ']'                      (66)
	Exp -> '[' Args ']'                                (67)
	Exp -> structName '{' Args '}'                     (68)
	Exp -> '(' Exp ')'                                 (69)
	Args -> Exp ',' Args                               (70)
	Args -> Exp                                        (71)
	Args ->                                            (72)

-----------------------------------------------------------------------------
Terminals
-----------------------------------------------------------------------------
	ident          { Lex.Token _ (Lex.TIdent $$) }
	structName     { Lex.Token _ (Lex.TDataStructures $$) }
	intLit         { Lex.Token _ (Lex.TIntNumber $$) }
	floatLit       { Lex.Token _ (Lex.TFloatNumber $$) }
	charLit        { Lex.Token _ (Lex.TCharacter $$) }
	stringLit      { Lex.Token _ (Lex.TString $$) }
	'TYPE'         { $$ }
	'true'         { Lex.Token _ Lex.TTrue }
	'false'        { Lex.Token _ Lex.TFalse }
	'func'         { Lex.Token _ Lex.TFunc }
	'return'       { Lex.Token _ Lex.TReturn }
	'print'        { Lex.Token _ Lex.TPrint }
	'new'          { Lex.Token _ Lex.TNew }
	'if'           { Lex.Token _ Lex.TIf }
	'else'         { Lex.Token _ Lex.TElse }
	'while'        { Lex.Token _ Lex.TWhile }
	'for'          { Lex.Token _ Lex.TFor }
	'('            { Lex.Token _ Lex.TLParen }
	')'            { Lex.Token _ Lex.TRParen }
	'{'            { Lex.Token _ Lex.TLBrace }
	'}'            { Lex.Token _ Lex.TRBrace }
	'['            { Lex.Token _ Lex.TLBracket }
	']'            { Lex.Token _ Lex.TRBracket }
	','            { Lex.Token _ Lex.TComma }
	';'            { Lex.Token _ Lex.TSemi }
	':'            { Lex.Token _ Lex.TColon }
	'.'            { Lex.Token _ Lex.TDot }
	'='            { Lex.Token _ Lex.TAssign }
	'+'            { Lex.Token _ Lex.TPlus }
	'-'            { Lex.Token _ Lex.TMinus }
	'*'            { Lex.Token _ Lex.TTimes }
	'/'            { Lex.Token _ Lex.TDiv }
	'=='           { Lex.Token _ Lex.TEq }
	'!='           { Lex.Token _ Lex.TNeq }
	'<'            { Lex.Token _ Lex.TLt }
	'>'            { Lex.Token _ Lex.TGt }
	'<='           { Lex.Token _ Lex.TLeq }
	'>='           { Lex.Token _ Lex.TGeq }
	'&&'           { Lex.Token _ Lex.TAnd }

-----------------------------------------------------------------------------
Non-terminals
-----------------------------------------------------------------------------
	%start_parseProgram rule  0
	Program         rule  1
	Defs            rules 2, 3
	Def             rules 4, 5
	Struct          rule  6
	Fields          rules 7, 8
	Field           rule  9
	Function        rule  10
	ReturnType      rules 11, 12
	Params          rules 13, 14, 15
	Param           rules 16, 17
	Type            rule  18
	TypeSuffix      rules 19, 20
	ArrayNonEmpty   rules 21, 22
	BaseType        rules 23, 24
	Block           rule  25
	Stmts           rules 26, 27
	Stmt            rules 28, 29, 30, 31, 32, 33, 34, 35, 36, 37
	ForInit         rules 38, 39
	ForStep         rules 40, 41, 42
	LValue          rules 43, 44
	Exp             rules 45, 46, 47, 48, 49, 50, 51, 52, 53, 54, 55, 56, 57, 58, 59, 60, 61, 62, 63, 64, 65, 66, 67, 68, 69
	Args            rules 70, 71, 72

-----------------------------------------------------------------------------
States
-----------------------------------------------------------------------------
State 0

	%start_parseProgram -> . Program                    (rule 0)

	structName     shift, and enter state 6
	'func'         shift, and enter state 7
	%eof           reduce using rule 3

	Program        goto state 8
	Defs           goto state 2
	Def            goto state 3
	Struct         goto state 4
	Function       goto state 5

State 1

	Program -> . Defs                                   (rule 1)

	structName     shift, and enter state 6
	'func'         shift, and enter state 7

	Defs           goto state 2
	Def            goto state 3
	Struct         goto state 4
	Function       goto state 5

State 2

	Program -> Defs .                                   (rule 1)

	%eof           reduce using rule 1


State 3

	Defs -> Def . Defs                                  (rule 2)

	structName     shift, and enter state 6
	'func'         shift, and enter state 7
	%eof           reduce using rule 3

	Defs           goto state 11
	Def            goto state 3
	Struct         goto state 4
	Function       goto state 5

State 4

	Def -> Struct .                                     (rule 5)

	structName     reduce using rule 5
	'func'         reduce using rule 5
	%eof           reduce using rule 5


State 5

	Def -> Function .                                   (rule 4)

	structName     reduce using rule 4
	'func'         reduce using rule 4
	%eof           reduce using rule 4


State 6

	Struct -> structName . '{' Fields '}'               (rule 6)

	'{'            shift, and enter state 10


State 7

	Function -> 'func' . ident '(' Params ')' ReturnType Block    (rule 10)

	ident          shift, and enter state 9


State 8

	%start_parseProgram -> Program .                    (rule 0)

	%eof           accept


State 9

	Function -> 'func' ident . '(' Params ')' ReturnType Block    (rule 10)

	'('            shift, and enter state 15


State 10

	Struct -> structName '{' . Fields '}'               (rule 6)

	ident          shift, and enter state 14
	'}'            reduce using rule 8

	Fields         goto state 12
	Field          goto state 13

State 11

	Defs -> Def Defs .                                  (rule 2)

	%eof           reduce using rule 2


State 12

	Struct -> structName '{' Fields . '}'               (rule 6)

	'}'            shift, and enter state 21


State 13

	Fields -> Field . Fields                            (rule 7)

	ident          shift, and enter state 14
	'}'            reduce using rule 8

	Fields         goto state 20
	Field          goto state 13

State 14

	Field -> ident . ':' Type ';'                       (rule 9)

	':'            shift, and enter state 19


State 15

	Function -> 'func' ident '(' . Params ')' ReturnType Block    (rule 10)

	ident          shift, and enter state 18
	')'            reduce using rule 15

	Params         goto state 16
	Param          goto state 17

State 16

	Function -> 'func' ident '(' Params . ')' ReturnType Block    (rule 10)

	')'            shift, and enter state 28


State 17

	Params -> Param . ',' Params                        (rule 13)
	Params -> Param .                                   (rule 14)

	')'            reduce using rule 14
	','            shift, and enter state 27


State 18

	Param -> ident . ':' Type                           (rule 16)
	Param -> ident .                                    (rule 17)

	')'            reduce using rule 17
	','            reduce using rule 17
	':'            shift, and enter state 26


State 19

	Field -> ident ':' . Type ';'                       (rule 9)

	structName     shift, and enter state 24
	'TYPE'         shift, and enter state 25

	Type           goto state 22
	BaseType       goto state 23

State 20

	Fields -> Field Fields .                            (rule 7)

	'}'            reduce using rule 7


State 21

	Struct -> structName '{' Fields '}' .               (rule 6)

	structName     reduce using rule 6
	'func'         reduce using rule 6
	%eof           reduce using rule 6


State 22

	Field -> ident ':' Type . ';'                       (rule 9)

	';'            shift, and enter state 36


State 23

	Type -> BaseType . TypeSuffix                       (rule 18)

	')'            reduce using rule 20
	'{'            reduce using rule 20
	'['            shift, and enter state 35
			(reduce using rule 20)

	','            reduce using rule 20
	';'            reduce using rule 20

	TypeSuffix     goto state 33
	ArrayNonEmpty  goto state 34

State 24

	BaseType -> structName .                            (rule 24)

	')'            reduce using rule 24
	'{'            reduce using rule 24
	'['            reduce using rule 24
	','            reduce using rule 24
	';'            reduce using rule 24


State 25

	BaseType -> 'TYPE' .                                (rule 23)

	')'            reduce using rule 23
	'{'            reduce using rule 23
	'['            reduce using rule 23
	','            reduce using rule 23
	';'            reduce using rule 23


State 26

	Param -> ident ':' . Type                           (rule 16)

	structName     shift, and enter state 24
	'TYPE'         shift, and enter state 25

	Type           goto state 32
	BaseType       goto state 23

State 27

	Params -> Param ',' . Params                        (rule 13)

	ident          shift, and enter state 18
	')'            reduce using rule 15

	Params         goto state 31
	Param          goto state 17

State 28

	Function -> 'func' ident '(' Params ')' . ReturnType Block    (rule 10)

	'{'            reduce using rule 12
	':'            shift, and enter state 30

	ReturnType     goto state 29

State 29

	Function -> 'func' ident '(' Params ')' ReturnType . Block    (rule 10)

	'{'            shift, and enter state 41

	Block          goto state 40

State 30

	ReturnType -> ':' . Type                            (rule 11)

	structName     shift, and enter state 24
	'TYPE'         shift, and enter state 25

	Type           goto state 39
	BaseType       goto state 23

State 31

	Params -> Param ',' Params .                        (rule 13)

	')'            reduce using rule 13


State 32

	Param -> ident ':' Type .                           (rule 16)

	')'            reduce using rule 16
	','            reduce using rule 16


State 33

	Type -> BaseType TypeSuffix .                       (rule 18)

	')'            reduce using rule 18
	'{'            reduce using rule 18
	'['            reduce using rule 18
	','            reduce using rule 18
	';'            reduce using rule 18


State 34

	TypeSuffix -> ArrayNonEmpty .                       (rule 19)

	')'            reduce using rule 19
	'{'            reduce using rule 19
	'['            reduce using rule 19
	','            reduce using rule 19
	';'            reduce using rule 19


State 35

	ArrayNonEmpty -> '[' . ']'                          (rule 21)
	ArrayNonEmpty -> '[' . intLit ']'                   (rule 22)

	intLit         shift, and enter state 37
	']'            shift, and enter state 38


State 36

	Field -> ident ':' Type ';' .                       (rule 9)

	ident          reduce using rule 9
	'}'            reduce using rule 9


State 37

	ArrayNonEmpty -> '[' intLit . ']'                   (rule 22)

	']'            shift, and enter state 62


State 38

	ArrayNonEmpty -> '[' ']' .                          (rule 21)

	')'            reduce using rule 21
	'{'            reduce using rule 21
	'['            reduce using rule 21
	','            reduce using rule 21
	';'            reduce using rule 21


State 39

	ReturnType -> ':' Type .                            (rule 11)

	'{'            reduce using rule 11


State 40

	Function -> 'func' ident '(' Params ')' ReturnType Block .    (rule 10)

	structName     reduce using rule 10
	'func'         reduce using rule 10
	%eof           reduce using rule 10


State 41

	Block -> '{' . Stmts '}'                            (rule 25)

	ident          shift, and enter state 46
	structName     shift, and enter state 47
	intLit         shift, and enter state 48
	floatLit       shift, and enter state 49
	charLit        shift, and enter state 50
	stringLit      shift, and enter state 51
	'true'         shift, and enter state 52
	'false'        shift, and enter state 53
	'return'       shift, and enter state 54
	'print'        shift, and enter state 55
	'new'          shift, and enter state 56
	'if'           shift, and enter state 57
	'while'        shift, and enter state 58
	'for'          shift, and enter state 59
	'('            shift, and enter state 60
	'}'            reduce using rule 27
	'['            shift, and enter state 61

	Stmts          goto state 42
	Stmt           goto state 43
	LValue         goto state 44
	Exp            goto state 45

State 42

	Block -> '{' Stmts . '}'                            (rule 25)

	'}'            shift, and enter state 95


State 43

	Stmts -> Stmt . Stmts                               (rule 26)

	ident          shift, and enter state 46
	structName     shift, and enter state 47
	intLit         shift, and enter state 48
	floatLit       shift, and enter state 49
	charLit        shift, and enter state 50
	stringLit      shift, and enter state 51
	'true'         shift, and enter state 52
	'false'        shift, and enter state 53
	'return'       shift, and enter state 54
	'print'        shift, and enter state 55
	'new'          shift, and enter state 56
	'if'           shift, and enter state 57
	'while'        shift, and enter state 58
	'for'          shift, and enter state 59
	'('            shift, and enter state 60
	'}'            reduce using rule 27
	'['            shift, and enter state 61

	Stmts          goto state 94
	Stmt           goto state 43
	LValue         goto state 44
	Exp            goto state 45

State 44

	Stmt -> LValue . '=' Exp ';'                        (rule 29)
	LValue -> LValue . '[' Exp ']'                      (rule 43)
	LValue -> LValue . '.' ident                        (rule 44)

	'['            shift, and enter state 91
	'.'            shift, and enter state 92
	'='            shift, and enter state 93


State 45

	Stmt -> Exp . ';'                                   (rule 37)
	Exp -> Exp . '+' Exp                                (rule 52)
	Exp -> Exp . '-' Exp                                (rule 53)
	Exp -> Exp . '*' Exp                                (rule 54)
	Exp -> Exp . '/' Exp                                (rule 55)
	Exp -> Exp . '==' Exp                               (rule 56)
	Exp -> Exp . '!=' Exp                               (rule 57)
	Exp -> Exp . '<' Exp                                (rule 58)
	Exp -> Exp . '>' Exp                                (rule 59)
	Exp -> Exp . '<=' Exp                               (rule 60)
	Exp -> Exp . '>=' Exp                               (rule 61)
	Exp -> Exp . '&&' Exp                               (rule 62)
	Exp -> Exp . '[' Exp ']'                            (rule 64)
	Exp -> Exp . '.' ident                              (rule 65)

	'['            shift, and enter state 77
	';'            shift, and enter state 78
	'.'            shift, and enter state 79
	'+'            shift, and enter state 80
	'-'            shift, and enter state 81
	'*'            shift, and enter state 82
	'/'            shift, and enter state 83
	'=='           shift, and enter state 84
	'!='           shift, and enter state 85
	'<'            shift, and enter state 86
	'>'            shift, and enter state 87
	'<='           shift, and enter state 88
	'>='           shift, and enter state 89
	'&&'           shift, and enter state 90


State 46

	Stmt -> ident . '=' Exp ';'                         (rule 28)
	Exp -> ident .                                      (rule 51)
	Exp -> ident . '(' Args ')'                         (rule 63)

	'('            shift, and enter state 75
	'['            reduce using rule 51
	';'            reduce using rule 51
	'.'            reduce using rule 51
	'='            shift, and enter state 76
	'+'            reduce using rule 51
	'-'            reduce using rule 51
	'*'            reduce using rule 51
	'/'            reduce using rule 51
	'=='           reduce using rule 51
	'!='           reduce using rule 51
	'<'            reduce using rule 51
	'>'            reduce using rule 51
	'<='           reduce using rule 51
	'>='           reduce using rule 51
	'&&'           reduce using rule 51


State 47

	Exp -> structName . '{' Args '}'                    (rule 68)

	'{'            shift, and enter state 74


State 48

	Exp -> intLit .                                     (rule 45)

	')'            reduce using rule 45
	'}'            reduce using rule 45
	'['            reduce using rule 45
	']'            reduce using rule 45
	','            reduce using rule 45
	';'            reduce using rule 45
	'.'            reduce using rule 45
	'+'            reduce using rule 45
	'-'            reduce using rule 45
	'*'            reduce using rule 45
	'/'            reduce using rule 45
	'=='           reduce using rule 45
	'!='           reduce using rule 45
	'<'            reduce using rule 45
	'>'            reduce using rule 45
	'<='           reduce using rule 45
	'>='           reduce using rule 45
	'&&'           reduce using rule 45


State 49

	Exp -> floatLit .                                   (rule 46)

	')'            reduce using rule 46
	'}'            reduce using rule 46
	'['            reduce using rule 46
	']'            reduce using rule 46
	','            reduce using rule 46
	';'            reduce using rule 46
	'.'            reduce using rule 46
	'+'            reduce using rule 46
	'-'            reduce using rule 46
	'*'            reduce using rule 46
	'/'            reduce using rule 46
	'=='           reduce using rule 46
	'!='           reduce using rule 46
	'<'            reduce using rule 46
	'>'            reduce using rule 46
	'<='           reduce using rule 46
	'>='           reduce using rule 46
	'&&'           reduce using rule 46


State 50

	Exp -> charLit .                                    (rule 47)

	')'            reduce using rule 47
	'}'            reduce using rule 47
	'['            reduce using rule 47
	']'            reduce using rule 47
	','            reduce using rule 47
	';'            reduce using rule 47
	'.'            reduce using rule 47
	'+'            reduce using rule 47
	'-'            reduce using rule 47
	'*'            reduce using rule 47
	'/'            reduce using rule 47
	'=='           reduce using rule 47
	'!='           reduce using rule 47
	'<'            reduce using rule 47
	'>'            reduce using rule 47
	'<='           reduce using rule 47
	'>='           reduce using rule 47
	'&&'           reduce using rule 47


State 51

	Exp -> stringLit .                                  (rule 48)

	')'            reduce using rule 48
	'}'            reduce using rule 48
	'['            reduce using rule 48
	']'            reduce using rule 48
	','            reduce using rule 48
	';'            reduce using rule 48
	'.'            reduce using rule 48
	'+'            reduce using rule 48
	'-'            reduce using rule 48
	'*'            reduce using rule 48
	'/'            reduce using rule 48
	'=='           reduce using rule 48
	'!='           reduce using rule 48
	'<'            reduce using rule 48
	'>'            reduce using rule 48
	'<='           reduce using rule 48
	'>='           reduce using rule 48
	'&&'           reduce using rule 48


State 52

	Exp -> 'true' .                                     (rule 49)

	')'            reduce using rule 49
	'}'            reduce using rule 49
	'['            reduce using rule 49
	']'            reduce using rule 49
	','            reduce using rule 49
	';'            reduce using rule 49
	'.'            reduce using rule 49
	'+'            reduce using rule 49
	'-'            reduce using rule 49
	'*'            reduce using rule 49
	'/'            reduce using rule 49
	'=='           reduce using rule 49
	'!='           reduce using rule 49
	'<'            reduce using rule 49
	'>'            reduce using rule 49
	'<='           reduce using rule 49
	'>='           reduce using rule 49
	'&&'           reduce using rule 49


State 53

	Exp -> 'false' .                                    (rule 50)

	')'            reduce using rule 50
	'}'            reduce using rule 50
	'['            reduce using rule 50
	']'            reduce using rule 50
	','            reduce using rule 50
	';'            reduce using rule 50
	'.'            reduce using rule 50
	'+'            reduce using rule 50
	'-'            reduce using rule 50
	'*'            reduce using rule 50
	'/'            reduce using rule 50
	'=='           reduce using rule 50
	'!='           reduce using rule 50
	'<'            reduce using rule 50
	'>'            reduce using rule 50
	'<='           reduce using rule 50
	'>='           reduce using rule 50
	'&&'           reduce using rule 50


State 54

	Stmt -> 'return' . Exp ';'                          (rule 31)
	Stmt -> 'return' . ';'                              (rule 32)

	ident          shift, and enter state 65
	structName     shift, and enter state 47
	intLit         shift, and enter state 48
	floatLit       shift, and enter state 49
	charLit        shift, and enter state 50
	stringLit      shift, and enter state 51
	'true'         shift, and enter state 52
	'false'        shift, and enter state 53
	'new'          shift, and enter state 56
	'('            shift, and enter state 60
	'['            shift, and enter state 61
	';'            shift, and enter state 73

	Exp            goto state 72

State 55

	Stmt -> 'print' . '(' Exp ')' ';'                   (rule 30)

	'('            shift, and enter state 71


State 56

	Exp -> 'new' . Type '[' Exp ']'                     (rule 66)

	structName     shift, and enter state 24
	'TYPE'         shift, and enter state 25

	Type           goto state 70
	BaseType       goto state 23

State 57

	Stmt -> 'if' . '(' Exp ')' Block 'else' Block       (rule 33)
	Stmt -> 'if' . '(' Exp ')' Block                    (rule 34)

	'('            shift, and enter state 69


State 58

	Stmt -> 'while' . '(' Exp ')' Block                 (rule 35)

	'('            shift, and enter state 68


State 59

	Stmt -> 'for' . '(' ForInit ';' Exp ';' ForStep ')' Block    (rule 36)

	'('            shift, and enter state 67


State 60

	Exp -> '(' . Exp ')'                                (rule 69)

	ident          shift, and enter state 65
	structName     shift, and enter state 47
	intLit         shift, and enter state 48
	floatLit       shift, and enter state 49
	charLit        shift, and enter state 50
	stringLit      shift, and enter state 51
	'true'         shift, and enter state 52
	'false'        shift, and enter state 53
	'new'          shift, and enter state 56
	'('            shift, and enter state 60
	'['            shift, and enter state 61

	Exp            goto state 66

State 61

	Exp -> '[' . Args ']'                               (rule 67)

	ident          shift, and enter state 65
	structName     shift, and enter state 47
	intLit         shift, and enter state 48
	floatLit       shift, and enter state 49
	charLit        shift, and enter state 50
	stringLit      shift, and enter state 51
	'true'         shift, and enter state 52
	'false'        shift, and enter state 53
	'new'          shift, and enter state 56
	'('            shift, and enter state 60
	'['            shift, and enter state 61
	']'            reduce using rule 72

	Exp            goto state 63
	Args           goto state 64

State 62

	ArrayNonEmpty -> '[' intLit ']' .                   (rule 22)

	')'            reduce using rule 22
	'{'            reduce using rule 22
	'['            reduce using rule 22
	','            reduce using rule 22
	';'            reduce using rule 22


State 63

	Exp -> Exp . '+' Exp                                (rule 52)
	Exp -> Exp . '-' Exp                                (rule 53)
	Exp -> Exp . '*' Exp                                (rule 54)
	Exp -> Exp . '/' Exp                                (rule 55)
	Exp -> Exp . '==' Exp                               (rule 56)
	Exp -> Exp . '!=' Exp                               (rule 57)
	Exp -> Exp . '<' Exp                                (rule 58)
	Exp -> Exp . '>' Exp                                (rule 59)
	Exp -> Exp . '<=' Exp                               (rule 60)
	Exp -> Exp . '>=' Exp                               (rule 61)
	Exp -> Exp . '&&' Exp                               (rule 62)
	Exp -> Exp . '[' Exp ']'                            (rule 64)
	Exp -> Exp . '.' ident                              (rule 65)
	Args -> Exp . ',' Args                              (rule 70)
	Args -> Exp .                                       (rule 71)

	')'            reduce using rule 71
	'}'            reduce using rule 71
	'['            shift, and enter state 77
	']'            reduce using rule 71
	','            shift, and enter state 124
	'.'            shift, and enter state 79
	'+'            shift, and enter state 80
	'-'            shift, and enter state 81
	'*'            shift, and enter state 82
	'/'            shift, and enter state 83
	'=='           shift, and enter state 84
	'!='           shift, and enter state 85
	'<'            shift, and enter state 86
	'>'            shift, and enter state 87
	'<='           shift, and enter state 88
	'>='           shift, and enter state 89
	'&&'           shift, and enter state 90


State 64

	Exp -> '[' Args . ']'                               (rule 67)

	']'            shift, and enter state 123


State 65

	Exp -> ident .                                      (rule 51)
	Exp -> ident . '(' Args ')'                         (rule 63)

	'('            shift, and enter state 75
	')'            reduce using rule 51
	'}'            reduce using rule 51
	'['            reduce using rule 51
	']'            reduce using rule 51
	','            reduce using rule 51
	';'            reduce using rule 51
	'.'            reduce using rule 51
	'+'            reduce using rule 51
	'-'            reduce using rule 51
	'*'            reduce using rule 51
	'/'            reduce using rule 51
	'=='           reduce using rule 51
	'!='           reduce using rule 51
	'<'            reduce using rule 51
	'>'            reduce using rule 51
	'<='           reduce using rule 51
	'>='           reduce using rule 51
	'&&'           reduce using rule 51


State 66

	Exp -> Exp . '+' Exp                                (rule 52)
	Exp -> Exp . '-' Exp                                (rule 53)
	Exp -> Exp . '*' Exp                                (rule 54)
	Exp -> Exp . '/' Exp                                (rule 55)
	Exp -> Exp . '==' Exp                               (rule 56)
	Exp -> Exp . '!=' Exp                               (rule 57)
	Exp -> Exp . '<' Exp                                (rule 58)
	Exp -> Exp . '>' Exp                                (rule 59)
	Exp -> Exp . '<=' Exp                               (rule 60)
	Exp -> Exp . '>=' Exp                               (rule 61)
	Exp -> Exp . '&&' Exp                               (rule 62)
	Exp -> Exp . '[' Exp ']'                            (rule 64)
	Exp -> Exp . '.' ident                              (rule 65)
	Exp -> '(' Exp . ')'                                (rule 69)

	')'            shift, and enter state 122
	'['            shift, and enter state 77
	'.'            shift, and enter state 79
	'+'            shift, and enter state 80
	'-'            shift, and enter state 81
	'*'            shift, and enter state 82
	'/'            shift, and enter state 83
	'=='           shift, and enter state 84
	'!='           shift, and enter state 85
	'<'            shift, and enter state 86
	'>'            shift, and enter state 87
	'<='           shift, and enter state 88
	'>='           shift, and enter state 89
	'&&'           shift, and enter state 90


State 67

	Stmt -> 'for' '(' . ForInit ';' Exp ';' ForStep ')' Block    (rule 36)

	ident          shift, and enter state 121
	';'            reduce using rule 39

	ForInit        goto state 120

State 68

	Stmt -> 'while' '(' . Exp ')' Block                 (rule 35)

	ident          shift, and enter state 65
	structName     shift, and enter state 47
	intLit         shift, and enter state 48
	floatLit       shift, and enter state 49
	charLit        shift, and enter state 50
	stringLit      shift, and enter state 51
	'true'         shift, and enter state 52
	'false'        shift, and enter state 53
	'new'          shift, and enter state 56
	'('            shift, and enter state 60
	'['            shift, and enter state 61

	Exp            goto state 119

State 69

	Stmt -> 'if' '(' . Exp ')' Block 'else' Block       (rule 33)
	Stmt -> 'if' '(' . Exp ')' Block                    (rule 34)

	ident          shift, and enter state 65
	structName     shift, and enter state 47
	intLit         shift, and enter state 48
	floatLit       shift, and enter state 49
	charLit        shift, and enter state 50
	stringLit      shift, and enter state 51
	'true'         shift, and enter state 52
	'false'        shift, and enter state 53
	'new'          shift, and enter state 56
	'('            shift, and enter state 60
	'['            shift, and enter state 61

	Exp            goto state 118

State 70

	Exp -> 'new' Type . '[' Exp ']'                     (rule 66)

	'['            shift, and enter state 117


State 71

	Stmt -> 'print' '(' . Exp ')' ';'                   (rule 30)

	ident          shift, and enter state 65
	structName     shift, and enter state 47
	intLit         shift, and enter state 48
	floatLit       shift, and enter state 49
	charLit        shift, and enter state 50
	stringLit      shift, and enter state 51
	'true'         shift, and enter state 52
	'false'        shift, and enter state 53
	'new'          shift, and enter state 56
	'('            shift, and enter state 60
	'['            shift, and enter state 61

	Exp            goto state 116

State 72

	Stmt -> 'return' Exp . ';'                          (rule 31)
	Exp -> Exp . '+' Exp                                (rule 52)
	Exp -> Exp . '-' Exp                                (rule 53)
	Exp -> Exp . '*' Exp                                (rule 54)
	Exp -> Exp . '/' Exp                                (rule 55)
	Exp -> Exp . '==' Exp                               (rule 56)
	Exp -> Exp . '!=' Exp                               (rule 57)
	Exp -> Exp . '<' Exp                                (rule 58)
	Exp -> Exp . '>' Exp                                (rule 59)
	Exp -> Exp . '<=' Exp                               (rule 60)
	Exp -> Exp . '>=' Exp                               (rule 61)
	Exp -> Exp . '&&' Exp                               (rule 62)
	Exp -> Exp . '[' Exp ']'                            (rule 64)
	Exp -> Exp . '.' ident                              (rule 65)

	'['            shift, and enter state 77
	';'            shift, and enter state 115
	'.'            shift, and enter state 79
	'+'            shift, and enter state 80
	'-'            shift, and enter state 81
	'*'            shift, and enter state 82
	'/'            shift, and enter state 83
	'=='           shift, and enter state 84
	'!='           shift, and enter state 85
	'<'            shift, and enter state 86
	'>'            shift, and enter state 87
	'<='           shift, and enter state 88
	'>='           shift, and enter state 89
	'&&'           shift, and enter state 90


State 73

	Stmt -> 'return' ';' .                              (rule 32)

	ident          reduce using rule 32
	structName     reduce using rule 32
	intLit         reduce using rule 32
	floatLit       reduce using rule 32
	charLit        reduce using rule 32
	stringLit      reduce using rule 32
	'true'         reduce using rule 32
	'false'        reduce using rule 32
	'return'       reduce using rule 32
	'print'        reduce using rule 32
	'new'          reduce using rule 32
	'if'           reduce using rule 32
	'while'        reduce using rule 32
	'for'          reduce using rule 32
	'('            reduce using rule 32
	'}'            reduce using rule 32
	'['            reduce using rule 32


State 74

	Exp -> structName '{' . Args '}'                    (rule 68)

	ident          shift, and enter state 65
	structName     shift, and enter state 47
	intLit         shift, and enter state 48
	floatLit       shift, and enter state 49
	charLit        shift, and enter state 50
	stringLit      shift, and enter state 51
	'true'         shift, and enter state 52
	'false'        shift, and enter state 53
	'new'          shift, and enter state 56
	'('            shift, and enter state 60
	'}'            reduce using rule 72
	'['            shift, and enter state 61

	Exp            goto state 63
	Args           goto state 114

State 75

	Exp -> ident '(' . Args ')'                         (rule 63)

	ident          shift, and enter state 65
	structName     shift, and enter state 47
	intLit         shift, and enter state 48
	floatLit       shift, and enter state 49
	charLit        shift, and enter state 50
	stringLit      shift, and enter state 51
	'true'         shift, and enter state 52
	'false'        shift, and enter state 53
	'new'          shift, and enter state 56
	'('            shift, and enter state 60
	')'            reduce using rule 72
	'['            shift, and enter state 61

	Exp            goto state 63
	Args           goto state 113

State 76

	Stmt -> ident '=' . Exp ';'                         (rule 28)

	ident          shift, and enter state 65
	structName     shift, and enter state 47
	intLit         shift, and enter state 48
	floatLit       shift, and enter state 49
	charLit        shift, and enter state 50
	stringLit      shift, and enter state 51
	'true'         shift, and enter state 52
	'false'        shift, and enter state 53
	'new'          shift, and enter state 56
	'('            shift, and enter state 60
	'['            shift, and enter state 61

	Exp            goto state 112

State 77

	Exp -> Exp '[' . Exp ']'                            (rule 64)

	ident          shift, and enter state 65
	structName     shift, and enter state 47
	intLit         shift, and enter state 48
	floatLit       shift, and enter state 49
	charLit        shift, and enter state 50
	stringLit      shift, and enter state 51
	'true'         shift, and enter state 52
	'false'        shift, and enter state 53
	'new'          shift, and enter state 56
	'('            shift, and enter state 60
	'['            shift, and enter state 61

	Exp            goto state 111

State 78

	Stmt -> Exp ';' .                                   (rule 37)

	ident          reduce using rule 37
	structName     reduce using rule 37
	intLit         reduce using rule 37
	floatLit       reduce using rule 37
	charLit        reduce using rule 37
	stringLit      reduce using rule 37
	'true'         reduce using rule 37
	'false'        reduce using rule 37
	'return'       reduce using rule 37
	'print'        reduce using rule 37
	'new'          reduce using rule 37
	'if'           reduce using rule 37
	'while'        reduce using rule 37
	'for'          reduce using rule 37
	'('            reduce using rule 37
	'}'            reduce using rule 37
	'['            reduce using rule 37


State 79

	Exp -> Exp '.' . ident                              (rule 65)

	ident          shift, and enter state 110


State 80

	Exp -> Exp '+' . Exp                                (rule 52)
